AppClipboard (I)
- use for d&d