@@ -117,6 +117,8 @@ def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,ja
                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED',
                 '--add-exports', 'javafx.controls/com.sun.javafx.charts=ALL-UNNAMED',
                 '--add-exports', 'javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED',
+                '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
+                '--add-exports', 'javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED',
     ]
     
 // extend Netbeans Gradle "Run" task
